--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: eddies
 Type: Package
-Title: Global Ocean Eddy database
+Title: Global Ocean Eddies Database
 Version: 1.0
 Date: 2015-12-01
 Author: Yves LE BRAS
 Imports:
   R.matlab,
   data.table,
-Maintainer: Yves Le Bras<yveslebras.fr@gmail.com>
+Maintainer: Yves Le Bras <yveslebras.fr@gmail.com>
 Description: Import data from an eddy database of (Matlab .mat files) and
- provides some utils to manipulate it in R.
+ provides some utils to manipulate it in R. Data source:
+ Faghmous JH, Frenger I, Yao Y, Warmka R, Lindell A, Kumar V (2015)
+ Data from: A daily global mesoscale ocean eddy dataset from satellite altimetry.
+ Dryad Digital Repository. <http://dx.doi.org/10.5061/dryad.gp40h>
 License: MIT + file LICENSE
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
